--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,8 @@
+<div class="container">
 <h1>Edit task</h1>
 
 <%= render "form", task: @task %>
 
-<%= link_to "Back to list", tasks_path %>
+<%= link_to "Back to list", tasks_path, :class => "btn btn-primary" %>
+
+</div>
