--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,18 @@
+<div class="container">
 <h1> <%= @task.title %></h1>
+
+<div class="alert alert-secondary" role="alert">
 <p><%= @task.details %></p>
-<p> <%= @task.completed %></p>
+</div>
 
-<%= link_to "Edit task", edit_task_path %>
+<% if @task.completed %>
+<p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+  <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 0 0 3 14.5h10a1.5 1.5 0 0 0 1.5-1.5V8a.5.5 0 0 0-1 0v5a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V3a.5.5 0 0 1 .5-.5h8a.5.5 0 0 0 0-1H3A1.5 1.5 0 0 0 1.5 3v10z"/>
+</svg> The task is completed</p>
+<% else %>
+<p>The task is not yet completed</p>
+<% end %>
 
-<%= link_to "Back to list", tasks_path %>
+<%= link_to "Edit task", edit_task_path, :class => "btn btn-warning" %> <%= link_to "Back to list", tasks_path, :class => "btn btn-primary" %>
+</div>
